added random js and got js working with browsersync

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
 <body>
   <div class="site-width">
-    <div class="steam-account"></div>
+    <div class="steam-account">
+      <input id="steam-acc" type="number">
+    </div>
     <div class="bingo-board">
       <table>
         <tr class="row-1">
@@ -35,7 +37,7 @@
           <td class="bingo-square"><span>5</span></td>
         </td>
         <tr class="row-3">
-          <td class="bingo-square"><span>1</span></td>
+          <td class="bingo-square" id="ggout"><span>You say gg in 70% of matches</span></td>
           <td class="bingo-square"><span>2</span></td>
           <td class="bingo-square"><span>Somebody Tilted (Free Space)</span></td>
           <td class="bingo-square"><span>4</span></td>
