--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <table>
         <tr class="row-1">
           <td class="bingo-square" id="card-1-1"><span>1</span></td>
-          <td class="bingo-square" id="card-1-2"></td>
+          <td class="bingo-square" id="card-1-2"><span>2</span></td>
           <td class="bingo-square" id="card-1-3"><span>3</span></td>
           <td class="bingo-square" id="card-1-4"><span>4</span></td>
           <td class="bingo-square" id="card-1-5"><span>5</span></td>
@@ -57,7 +57,7 @@
           <td class="bingo-square" id="card-2-5"><span>5</span></td>
         </td>
         <tr class="row-3">
-          <td class="bingo-square" id="card-3-1"></td>
+          <td class="bingo-square" id="card-3-1"><span>1</span></td>
           <td class="bingo-square" id="card-3-2"><span>2</span></td>
           <td class="bingo-square">
             <span>(Free Space)</span>
@@ -76,7 +76,7 @@
         <tr class="row-5">
           <td class="bingo-square" id="card-5-1"><span>1</span></td>
           <td class="bingo-square" id="card-5-2"><span>2</span></td>
-          <td class="bingo-square" id="card-5-3"></td>
+          <td class="bingo-square" id="card-5-3"><span>3</span></td>
           <td class="bingo-square" id="card-5-4"><span>4</span></td>
           <td class="bingo-square" id="card-5-5"><span>5</span></td>
         </tr>
