Added some new cards, gulp to concat js all to one file.

--- a/index.html
+++ b/index.html
@@ -83,8 +83,6 @@
       </table>
     </div>
   </div>
-  <script src="js/heroes.js"></script>
-  <script src="js/cards.js"></script>
-  <script src="js/scripts.js"></script>
+  <script src="dist/js/scripts.js"></script>
 </body>
 </html>
