--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <tr class="row-3">
           <td class="bingo-square" id="card-3-1"><span>1</span></td>
           <td class="bingo-square" id="card-3-2"><span>2</span></td>
-          <td class="bingo-square">
-            <div class="tooltip has-square">Somebody Tilted</div>
+          <td class="bingo-square  has-square">
+            <div class="tooltip">Somebody Tilted</div>
             <span>(Free Space)</span>
           </td>
           <td class="bingo-square" id="card-3-4"><span>4</span></td>
