js babeled back to es5 and minified

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Dota Bingo</title>
-  <meta name="description" content="Did your pubs earn you a bingo">
+  <title>Dota2 Bingo</title>
+  <meta name="description" content="Did your pub earn you a bingo?">
   <meta name="author" content="BigFancyBen">
 
   <link rel="stylesheet" href="css/style.css">
@@ -18,7 +18,7 @@
 <body>
   <div class="site-width">
     <div class="site-hero">
-      <h1>Dota 2 Matchmaking Bingo</h1>
+      <h1>Dota2 Matchmaking Bingo</h1>
       <div class="user-input">
         <div class="form-field">
           <div class="form-label">Match ID:<br></div>
