Style revamp, added matchid helper hover.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       <h1>Dota2 Matchmaking Bingo</h1>
       <div class="user-input">
         <div class="form-field">
-          <div class="form-label">Match ID:<br></div>
+          <div class="form-label">Match ID:
+            <div class="match-id-location"><img src="img/matchid.png"></div><br>
+          </div>
           <input id="match-id" type="number" maxlength="10">
         </div>
         <div class="form-and">and</div>
