--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
   <link rel="stylesheet" href="css/style.css">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="dotabingo/img/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="dotabingo/img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="dotabingo/img/favicon-16x16.png">
-  <link rel="manifest" href="dotabingo/img/manifest.json">
-  <link rel="mask-icon" href="dotabingo/img/safari-pinned-tab.svg" color="#d55b5b">
-  <link rel="shortcut icon" href="dotabingo/img/favicon.ico">
-  <meta name="msapplication-config" content="dotabingo/img/browserconfig.xml">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+  <link rel="manifest" href="img/manifest.json">
+  <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#d55b5b">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="msapplication-config" content="img/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
   <!--[if lt IE 9]>
