Lint that css, better help

--- a/site/index.html
+++ b/site/index.html
@@ -25,11 +25,13 @@
   <div class="site-width">
     <div class="site-hero">
       <h1>Dota2 Matchmaking Bingo</h1>
+      <div class ="how-to">
+        <h3 class="help">Help?</h3>
+        <p class= "instructions">Login to <a href="https://opendota.com">OpenDota.com</a> to enable replay parsing, this is also an easy place to find match ids.</p>
+      </div>
       <div class="user-input">
         <div class="form-field">
-          <div class="form-label">Match ID:
-            <div class="match-id-location"><img src="img/matchid.png"></div><br>
-          </div>
+          <div class="form-label">Match ID:</div>
           <input id="match-id" type="number" maxlength="10">
         </div>
         <div class="form-and">and</div>
@@ -51,42 +53,42 @@
     <div class="bingo-board">
       <table>
         <tr class="row-1">
-          <td class="bingo-square" id="card-1-1"><span>1</span></td>
-          <td class="bingo-square" id="card-1-2"><span>2</span></td>
-          <td class="bingo-square" id="card-1-3"><span>3</span></td>
-          <td class="bingo-square" id="card-1-4"><span>4</span></td>
-          <td class="bingo-square" id="card-1-5"><span>5</span></td>
+          <td class="bingo-square" id="card-1-1"><span></span></td>
+          <td class="bingo-square" id="card-1-2"><span></span></td>
+          <td class="bingo-square" id="card-1-3"><span></span></td>
+          <td class="bingo-square" id="card-1-4"><span></span></td>
+          <td class="bingo-square" id="card-1-5"><span></span></td>
         </tr>
         <tr class="row-2">
-          <td class="bingo-square" id="card-2-1"><span>1</span></td>
-          <td class="bingo-square" id="card-2-2"><span>2</span></td>
-          <td class="bingo-square" id="card-2-3"><span>3</span></td>
-          <td class="bingo-square" id="card-2-4"><span>4</span></td>
-          <td class="bingo-square" id="card-2-5"><span>5</span></td>
+          <td class="bingo-square" id="card-2-1"><span></span></td>
+          <td class="bingo-square" id="card-2-2"><span></span></td>
+          <td class="bingo-square" id="card-2-3"><span></span></td>
+          <td class="bingo-square" id="card-2-4"><span></span></td>
+          <td class="bingo-square" id="card-2-5"><span></span></td>
         </td>
         <tr class="row-3">
-          <td class="bingo-square" id="card-3-1"><span>1</span></td>
-          <td class="bingo-square" id="card-3-2"><span>2</span></td>
+          <td class="bingo-square" id="card-3-1"><span></span></td>
+          <td class="bingo-square" id="card-3-2"><span></span></td>
           <td class="bingo-square  has-square">
             <div class="tooltip">Somebody Tilted</div>
             <span>(Free Space)</span>
           </td>
-          <td class="bingo-square" id="card-3-4"><span>4</span></td>
-          <td class="bingo-square" id="card-3-5"><span>5</span></td>
+          <td class="bingo-square" id="card-3-4"><span></span></td>
+          <td class="bingo-square" id="card-3-5"><span></span></td>
         </tr>
         <tr class="row-4">
-          <td class="bingo-square" id="card-4-1"><span>1</span></td>
-          <td class="bingo-square" id="card-4-2"><span>2</span></td>
-          <td class="bingo-square" id="card-4-3"><span>3</span></td>
-          <td class="bingo-square" id="card-4-4"><span>4</span></td>
-          <td class="bingo-square" id="card-4-5"><span>5</span></td>
+          <td class="bingo-square" id="card-4-1"><span></span></td>
+          <td class="bingo-square" id="card-4-2"><span></span></td>
+          <td class="bingo-square" id="card-4-3"><span></span></td>
+          <td class="bingo-square" id="card-4-4"><span></span></td>
+          <td class="bingo-square" id="card-4-5"><span></span></td>
         </tr>
         <tr class="row-5">
-          <td class="bingo-square" id="card-5-1"><span>1</span></td>
-          <td class="bingo-square" id="card-5-2"><span>2</span></td>
-          <td class="bingo-square" id="card-5-3"><span>3</span></td>
-          <td class="bingo-square" id="card-5-4"><span>4</span></td>
-          <td class="bingo-square" id="card-5-5"><span>5</span></td>
+          <td class="bingo-square" id="card-5-1"><span></span></td>
+          <td class="bingo-square" id="card-5-2"><span></span></td>
+          <td class="bingo-square" id="card-5-3"><span></span></td>
+          <td class="bingo-square" id="card-5-4"><span></span></td>
+          <td class="bingo-square" id="card-5-5"><span></span></td>
         </tr>
       </table>
     </div>
