Twitter social share stuff

--- a/site/index.html
+++ b/site/index.html
@@ -19,6 +19,12 @@
   <meta name="msapplication-config" content="img/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@BigFancyBen" />
+  <meta name="twitter:title" content="Dota2 Bingo" />
+  <meta name="twitter:description" content="Did your match earn you a bingo?" />
+  <meta name="twitter:image" content="img/bingosocial.png" />
+
 </head>
 
 <body>
